[package]
name = "libafl-clang-wrapper-for-LKL"
version = "0.8.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.3" }
num_cpus = "1.0"

[dependencies]
libafl_cc = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "977415c" }
[[bin]]
name = "libafl_cc"

